    Updated layoutCopyCat feature
    Update network management functions
        createSubnetwork
        cloneNetwork
        renameNetwork
        importNetworkFromFile
    Updated selection features
        selectFirstNeighbors
        selectEdgesConnectingSelectedNodes
        selectEdgesAdjacentToSelectedNodes
    New Cytoscape session functions
        openSession
        closeSession
    Overhauled visual style settings to match Cytoscape's Defaults, Mappings, and Bypasses
    Added style dependency functions, in addition to lockNodeDimensions
        matchArrowColorToEdge
        syncNodeCustomGraphicsSize
    New set of functions for retrieving current visual property Values for nodes, edges and networks.
    New functions for network-level Visual Property Defaults, Bypasses and Values.
    Streamlined data table loading and retrieval
    New functions for installing and managing Cytoscape Apps, e.g.,
        installApp
        uninstallApp
        udpateApp
        getInstalledApps
        getAvailableApps
        getAppUpdates
        getAppStatus
    New functions for network Collections
        getCollectionList
        getCollectionName
        getCollectionSuid
        getCollectionNetworks

For Developers

    Reorganized functions into files corresponding to CyREST API, e.g., Collections, CytoscapeSystem, Layouts, Networks, etc.
    Normalized all documentation using roxygen2
    Streamlined interfaces to CyREST and Commands API (see above), greatly facilitating the implementation of any new functions matching CyREST or Command API additions
    Reverted all single-instance methods to simple functions, replacing class-based signatures with simple default values
    Established handy functions for validating network and view SUIDs
        getNetworkName
        getNetworkSuid
        getNetworkViewSuid

Deprecated

    Outdated function names

Defunct

    CytoscapeConnection and CytoscapeWindow classes, functions and parameters
